[gd_scene load_steps=3 format=3 uid="uid://b1gwyghbc47h0"]

[ext_resource type="Script" path="res://Editor/DialogueScript.gd" id="1_5j8rx"]
[ext_resource type="Theme" uid="uid://8orjmu4x0av7" path="res://DialogueNodes/NodeThemes.tres" id="1_efubc"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dialogue" type="HBoxContainer" parent="TabContainer"]
layout_mode = 2
script = ExtResource("1_5j8rx")

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Dialogue"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Dialogue/MarginContainer"]
layout_mode = 2

[node name="Nodes" type="VBoxContainer" parent="TabContainer/Dialogue/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Start" type="Button" parent="TabContainer/Dialogue/MarginContainer/VBoxContainer/Nodes" groups=["NodeButtons"]]
layout_mode = 2
theme = ExtResource("1_efubc")
theme_type_variation = &"StartButton"
text = "Start"

[node name="End" type="Button" parent="TabContainer/Dialogue/MarginContainer/VBoxContainer/Nodes" groups=["NodeButtons"]]
layout_mode = 2
theme = ExtResource("1_efubc")
theme_type_variation = &"StartButton"
text = "End"

[node name="Dialogue" type="Button" parent="TabContainer/Dialogue/MarginContainer/VBoxContainer/Nodes" groups=["NodeButtons"]]
layout_mode = 2
theme = ExtResource("1_efubc")
theme_type_variation = &"DialogueButton"
text = "Dialogue"

[node name="Quest" type="Button" parent="TabContainer/Dialogue/MarginContainer/VBoxContainer/Nodes" groups=["NodeButtons"]]
layout_mode = 2
theme = ExtResource("1_efubc")
theme_type_variation = &"QuestButton"
text = "Quest"

[node name="Options" type="Button" parent="TabContainer/Dialogue/MarginContainer/VBoxContainer/Nodes" groups=["NodeButtons"]]
layout_mode = 2
theme = ExtResource("1_efubc")
theme_type_variation = &"OptionsButton"
text = "Option"

[node name="Condition" type="Button" parent="TabContainer/Dialogue/MarginContainer/VBoxContainer/Nodes" groups=["NodeButtons"]]
layout_mode = 2
text = "Condition"

[node name="Jump" type="Button" parent="TabContainer/Dialogue/MarginContainer/VBoxContainer/Nodes" groups=["NodeButtons"]]
layout_mode = 2
theme = ExtResource("1_efubc")
theme_type_variation = &"MarkButton"
text = "Jump"

[node name="Mark" type="Button" parent="TabContainer/Dialogue/MarginContainer/VBoxContainer/Nodes" groups=["NodeButtons"]]
layout_mode = 2
theme = ExtResource("1_efubc")
theme_type_variation = &"MarkButton"
text = "Mark"

[node name="Menu" type="VBoxContainer" parent="TabContainer/Dialogue/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="New" type="Button" parent="TabContainer/Dialogue/MarginContainer/VBoxContainer/Menu"]
layout_mode = 2
text = "New"

[node name="Save" type="Button" parent="TabContainer/Dialogue/MarginContainer/VBoxContainer/Menu"]
layout_mode = 2
text = "Save"

[node name="Load" type="Button" parent="TabContainer/Dialogue/MarginContainer/VBoxContainer/Menu"]
layout_mode = 2
text = "Load"

[node name="GraphEdit" type="GraphEdit" parent="TabContainer/Dialogue"]
layout_mode = 2
size_flags_horizontal = 3
right_disconnects = true
scroll_offset = Vector2(-10, 0)

[node name="FileDialog" type="FileDialog" parent="TabContainer/Dialogue"]
size = Vector2i(600, 400)
root_subfolder = "Data"
filters = PackedStringArray("*.tres")

[connection signal="pressed" from="TabContainer/Dialogue/MarginContainer/VBoxContainer/Menu/New" to="TabContainer/Dialogue" method="_on_new_pressed"]
[connection signal="pressed" from="TabContainer/Dialogue/MarginContainer/VBoxContainer/Menu/Save" to="TabContainer/Dialogue" method="_on_save_pressed"]
[connection signal="connection_request" from="TabContainer/Dialogue/GraphEdit" to="TabContainer/Dialogue" method="_on_graph_edit_connection_request"]
[connection signal="delete_nodes_request" from="TabContainer/Dialogue/GraphEdit" to="TabContainer/Dialogue" method="_on_graph_edit_delete_nodes_request"]
[connection signal="disconnection_request" from="TabContainer/Dialogue/GraphEdit" to="TabContainer/Dialogue" method="_on_graph_edit_disconnection_request"]
[connection signal="file_selected" from="TabContainer/Dialogue/FileDialog" to="TabContainer/Dialogue" method="_on_file_dialog_file_selected"]
